--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
+    "events": "^3.3.0",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
+    "jsdom": "^20.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.6.1",
     "passport": "^0.6.0",
